<resources>
    <string name="app_name">HamburgueriaZ</string>
    <string name="name">Nome:</string>
    <string name="make_your_order">Faça seu pedido!</string>
    <string name="bacon">Bacon</string>
    <string name="cheese">Queijo</string>
    <string name="onion_rings">Onion Rings</string>
    <string name="quantity">Quantidade</string>
    <string name="summary_order">Resumo do pedido</string>
    <string name="place_order">Fazer pedido</string>
    <string name="currency_symbol">R$</string>
    <string name="value_quantity">0</string>
    <string name="value_final">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
</resources>