<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:contentDescription="banner-burger"
            app:srcCompat="@drawable/burgbg" />

        <TextView
            style="@style/EstiloTexto"
            android:text="@string/make_your_order" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/GroupCheckBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/Bacon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bacon" />

            <CheckBox
                android:id="@+id/Cheese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheese" />

            <CheckBox
                android:id="@+id/OnionRings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/onion_rings" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            style="@style/EstiloTexto"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="@style/EstiloBtn"
                android:onClick="subtractBtn"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/QuantityBurger"
                style="@style/EstiloTexto"
                android:text="@string/value_quantity" />

            <Button
                android:id="@+id/button3"
                style="@style/EstiloBtn"
                android:onClick="sumBtn"
                android:text="@string/plus" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/EstiloTexto"
            android:text="@string/summary_order" />

        <TextView
            android:id="@+id/Result"
            style="@style/EstiloTexto"
            android:text="@string/currency_symbol" />

        <Button
            android:id="@+id/button4"
            style="@style/EstiloBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sendRequest"
            android:text="@string/make_your_order" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>